# gsr_rgbt_project

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  REFACTORING_COMPLETE.md  SUMMARY.md  build_project.py  check_neurokit.py  gsr_rgbt_tools.sh  guide.md  pyproject.toml  refactoring_plan.md  refactoring_progress.md  requirements.txt  run_everything.sh  setup.py  setup.sh  setup_hooks.py  test_current_implementation.py  test_refactoring.py
.junie/: guidelines.md
docs/: CONTRIBUTING.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  GLOSSARY.md  GUIDE.md  INDUSTRY_STANDARDS_SUMMARY.md  android_thermal_app_guide.md  appendix.tex  assistant_logs.md  code_improvements_summary.md  consent_form.tex  continuous_integration_setup.md  data_analysis_guide.md  data_collection_initial.tex  data_collection_revised.tex  development_workflow.md  device_integration.md  documentation_strategy.md  equipment_setup.md  factorizephys_overview.md  future_improvements.md  future_research.md  github_workflows_guide.md  gsr_rgbt_system_guide.md  hardware.md  implementation_improvements.md  implementation_notes.md  implementation_overview.md  improvements_summary.md  information_sheet.tex  integrated_system_tutorial.md  mmrphys_overview.md  new_repositories_integration.md  plan.md  pre_commit_hooks.md  project_development_summary.md  project_evolution_timeline.md  project_plan_timeline.md  project_roadmap.md  proposal.tex  proposal_updated.tex  (+18 more)
references/: ibvp.tex
repo_forensic/: asd.py  process_timeline.py
src/: ARCHITECTURE.md  config.py  main.py
(+151 files in other folders)
